--- a/i18n/en/en.json
+++ b/i18n/en/en.json
@@ -15,6 +15,6 @@
   "chronicle": "Chronicle",
   
   "oneEuroADay": "1€ a day",
-  "oneMeal": "for a warm one meal.",
+  "oneMeal": "for one warm meal.",
   "getPate": "Get sponsor"
 }
