--- a/i18n/de/de.json
+++ b/i18n/de/de.json
@@ -7,7 +7,7 @@
   "aboutSubHead": "Wir über uns im Überblick",
   "aboutSubCol1": "Der Verein",
   "AGoal": "Ziel",
-  "AOrganization": "Organisation",
+  "AOrganization": "Der Vorstand",
   "ATransparency": "Transparenz",
   "AFinance": "Finanzen",
   "AStatute": "Satzung",
