--- a/content/fr/Finanzen/2023.md
+++ b/content/fr/Finanzen/2023.md
@@ -19,24 +19,24 @@ Bei uns ist genau das Gegenteil der Fall. Durch unsere ehrenamtlichen Tätigkeit
 Auch das Team in Kamerun arbeitet ehrenamtlich.
 
 <input type="checkbox" id="expand-image1" />
-<label class="img-div" for="expand-image1">
+<label for="expand-image1">
   <img src="/img/Finanzen/2023/GesamtErtrag.png#imagemd" alt="Gesamtertrag 2023" />
 </label>
-<div class="imagemd-caption">Gesamtertrag 2023</div>
+<div class="img-caption">Gesamtertrag 2023</div>
 <br>
 
 ## Ausgaben
 <br>
 
 #### Detaillierte Auflistung der Kosten des Vereins für das Jahr 2023
-<div class="finanzen-tabelle">
+<div class="scrollable-table">
 {{< csv-table >}}
 {{< include-file csv="static/img/Finanzen/2023/KostenDetails.csv" >}}
 {{< /csv-table >}}
 </div>  
 
 #### Detaillierte Auflistung der Ausgaben in Kamerun für das Jahr 2023
-<div class="finanzen-tabelle">
+<div class="scrollable-table">
 {{< csv-table >}}
 {{< include-file csv="static/img/Finanzen/2023/AusgabenInKamerunDetails.csv" >}}
 {{< /csv-table >}}
@@ -45,7 +45,7 @@ Auch das Team in Kamerun arbeitet ehrenamtlich.
 <br>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const cells = document.querySelectorAll(".kleine-tabelle tbody td");
+    const cells = document.querySelectorAll(".default-table tbody td");
     cells.forEach(cell => {
       const value = parseFloat(cell.textContent); // Konvertiere den Zellenwert in eine Zahl
       if (value < 0) {
@@ -55,7 +55,7 @@ Auch das Team in Kamerun arbeitet ehrenamtlich.
     });
   });
   document.addEventListener("DOMContentLoaded", function () {
-    const cells = document.querySelectorAll(".finanzen-tabelle tbody td");
+    const cells = document.querySelectorAll(".scrollable-table tbody td");
     cells.forEach(cell => {
       const value = parseFloat(cell.textContent); // Konvertiere den Zellenwert in eine Zahl
       if (value < 0) {
