--- a/i18n/de/de.json
+++ b/i18n/de/de.json
@@ -48,5 +48,8 @@
 
   "oneEuroADay": "1 € am Tag",
   "oneMeal": "für eine warme Mahlzeit.",
-  "getPate": "Werde Pate"
+  "getPate": "Werde Pate",
+
+  "gezieltSpenden": "gezielt Spenden"
+
 }
