--- a/i18n/de/de.json
+++ b/i18n/de/de.json
@@ -10,7 +10,7 @@
   "AOrganization": "Der Vorstand",
   "ATransparency": "Transparenz",
   "AFinance": "Finanzen",
-  "AStatute": "Satzung",
+  "AStatute": "Die Satzung",
   "APress": "Presse",
   "AChronicle": "Chronik",
     
