--- a/i18n/de/de.json
+++ b/i18n/de/de.json
@@ -2,6 +2,7 @@
   "campus": "Campus - Haus der Sonne",
   "about": "Wir über uns",
   "whatWeDo": "Was wir tun",
+  "cooperations": "Kooperationen",
   "toHelp": "Helfen",
   
   "aboutSubHead": "Wir über uns im Überblick",
@@ -36,6 +37,24 @@
   "wwDVideos": "Videos",
   "wwDChronicle": "Chronik",
   
+  "CooperationSubHead": "Unsere Kooperationen",
+  "CoopSubCol1": "Gesamtschule Kempen",
+  "CoopGSKEvents": "Veranstaltungen",
+  "CoopGSKLessons": "Unterricht/AG",
+  "CoopGSKGalerie": "Galerie",
+  "CoopGSKLink": "Link zur Homepage",
+
+  "CoopSubCol2": "Hannah-Arendt-Gymnasium",
+  "CoopHAGEvents": "Veranstaltungen",
+  "CoopHAGLessons": "Unterricht/AG",
+  "CoopHAGGalerie": "Galerie",
+  "CoopHAGLink": "Link zur Homepage",
+  
+  "CoopSubCol3": "Gesamtschule Mühlheim",
+  "CoopGSMEvents": "Veranstaltungen",
+  "CoopGSMGalerie": "Galerie",
+  "CoopGSMLink": "Link zur Homepage",
+
   "toHelpSubHead": "Wie kann ich dem Haus der Sonne helfen?",
   "toHelpSubCol1": "Spenden",
   "tHPatenschaften": "Pate werden",
