--- a/content/de/Reisetagebuch/2019.md
+++ b/content/de/Reisetagebuch/2019.md
@@ -3,7 +3,7 @@
     "draft": false,
     "title": "Reisetagebuch 2019",
     "author": "Chritian",
-    "description": "Hier finden Sie Christian's Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2019.",
+    "description": "Hier finden Sie Christians Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2019.",
     "image": "/img/Reisetagebuch/2019/Reisetagebuch2019Title.jpg"
 }
 ## 25. März 2019
@@ -71,15 +71,14 @@ Seit dem 25. März 2019 hält sich Christian wieder in Mbouda auf, um wichtige D
 
 ## 26. März 2019
 Hallo zusammen,  
-hier ein paar Bilder zu meinen Vorträgen in verschiedenen Schulen und Klassen über die Vorzüge, in Kamerun zu bleiben statt nach Europa zu gehen.  
+hier ein paar Bilder zu meinen Vorträgen in verschiedenen Schulen und Klassen über die Vorzüge, in Kamerun zu bleiben, statt nach Europa zu gehen.  
 Dabei ist mir wichtig gewesen realitätsnah über die Perspektiven beruflich wenig qualifizierter Migranten in Deutschland und Europa zu berichten; vor allem, den Jugendlichen vor Ort in Kamerun Mut zu machen, beim Aufbau ihres Landes mit anzupacken und nicht aus wirtschaftlichen Gründen deren leben bei der Flucht über das Mittelmeer zu riskieren.  
 Die wichtigsten Fragen und Antworten waren:
 - Warum müssen die Menschen nach Europa fliehen?
-- Wie ist die Situation der Flüchtlinge und Migrantes in Nordafrika insbesondere Libyen?
+- Wie ist die Situation der Flüchtlinge und Migranten in Nordafrika insbesondere Libyen?
 - Wie viele Menschen sterben auf See? Warum müssen sie sterben?
 - Wie kann man ganz legal nach Europa oder Amerika auswandern?
 - Welche Chance und Perspektiven hat man vor Ort in Kamerun?  
-Es ist mir klar geworden, wie wichtig dieses Projekt neben unseren Ziele ist.  
 Alle bis auf Lehrer waren über dieses Projekt sehr begeistert und wünschen eine regelmäßige Wiederholung für andere Kinder und Jugendliche...  
 Liebe Grüße,  
 Christian
@@ -145,7 +144,7 @@ Christian
 <p class="img-caption">Aufklärung 2019</p>
 
 ## 27. März 2019
-Heute standen Überraschungsbesuche bei Bertins Ausbildungsplatz und im Haus der Sonne statt. Seit dem letzten Jahr sind 2 Bänke zubruch gegangen. Ein paar Dinge sind zu reparieren. Es werden eine zusätzliche Tafel für den Nachhilfeunterricht und Sitzgelegenheiten für die Lehrer benötigt. Unsere 40 Schützlinge benötigen Kleidung für die Schule.  
+Heute standen Überraschungsbesuche bei Bertins Ausbildungsplatz und im Haus der Sonne statt. Seit dem letzten Jahr sind 2 Bänke zu Bruch gegangen. Ein paar Dinge sind zu reparieren. Es werden eine zusätzliche Tafel für den Nachhilfeunterricht und Sitzgelegenheiten für die Lehrer benötigt. Unsere 40 Schützlinge benötigen Kleidung für die Schule.  
 Liebe Grüße,  
 Christian
 <div class="swiper-container swiper-container-portrait">
@@ -248,9 +247,9 @@ Christian
 ## 28. März 2019
 Liebe Freunde,  
 mit dieser Aktion konnten wir alle Kinder und Jugendliche Glücklich machen. Es war das erste Mal im Leben, dass sie einen Ausflug machten. Selbst für die Menschen hier kam diese unerwartete Überraschung wie ein Wunder.  
-"Gott segne die Menschen die hinter dieser Aktion stehen!" konnte ich aus vielen Mündern hören, und ich antwortete: "diese Hilfe kommt aus Deutschland... von einem Verein."  
+"Gott segne die Menschen, die hinter dieser Aktion stehen!" konnte ich aus vielen Mündern hören, und ich antwortete: "diese Hilfe kommt aus Deutschland... von einem Verein."  
 Nicht zu vergessen sind die Händler, die unsere Aktion gelobt und sich herzlich bedankt haben.  
-Das einzig Problem, das ich hatte, war: Es waren 53 Kinder am diesem Tag da, obwohl wir ja davon eigentlich nur 40 Schützlinge haben. Was mache ich nun? Die Antwort war: "Das ist unserer Alltag hier, auch mit dem Essen. Mal kommen mehr als erwartet, und es fällt uns schwer, sie wegzuschicken."  
+Das einzige Problem, das ich hatte, war: Es waren 53 Kinder an diesem Tag da, obwohl wir ja davon eigentlich nur 40 Schützlinge haben. Was mache ich nun? Die Antwort war: "Das ist unser Alltag hier, auch mit dem Essen. Mal kommen mehr als erwartet, und es fällt uns schwer, sie wegzuschicken."  
 Liebe Grüße aus Mbouda,  
 Christian
 <div class="swiper-container swiper-container-portrait">
