--- a/content/de/Reisetagebuch/2022.md
+++ b/content/de/Reisetagebuch/2022.md
@@ -3,13 +3,13 @@
     "draft": false,
     "title": "Reisetagebuch 2022",
     "author": "Chritian",
-    "description": "Hier finden Sie Christian's Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2022.",
+    "description": "Hier finden Sie Christians Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2022.",
     "image": "/img/Reisetagebuch/2022/Reisetagebuch2022Title.jpg"
 }
 ## 10. März 2022
 Christian ist wieder in Kamerun. Am 09. März 2022 traf er in Mbouda ein. Leider wurde seine Ankunft durch den Tod eines dort ansässigen, nahen Verwandten überschattet. Unser Mitgefühl ist bei Tante Martha, Christian und deren Familie.  
 Der gesamte Tagesablauf steht unter dem Eindruck der Trauer. In die Trauerfeierlichkeiten ist das Gelände, auf dem sich das Haus der Sonne befindet, eingebunden. Daher fotografiert Christian dort sehr zurückhaltend. Dafür bitten wir um Verständnis.  
-Die ersten Fotos zeigen die Erdarbeiten und den Baufortschrittt des Schneiderateliers und die ungebrochene Nutzung der Wasserzapfstelle am Haus der Sonne.
+Die ersten Fotos zeigen die Erdarbeiten und den Baufortschritt des Schneiderateliers und die ungebrochene Nutzung der Wasserzapfstelle am Haus der Sonne.
 <div class="swiper-container swiper-container-portrait">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
@@ -115,7 +115,7 @@ Trotz der Trauerfeierlichkeiten gehen die Bauarbeiten weiter. Dabei wird aber vi
 
 ## 12. März 2022
 Der Bau des Schneiderateliers ist nun fast abgeschlossen. In der Werkstatt wurde der Boden verlegt. Restliche Verputzarbeiten wurden am Vormittag außen vorgenommen, am Nachmittag folgte der Anstrich. Auch die Installation der Solaranlage und der dazugehörenden Elektrik macht gute Fortschritte.  
-In der kommenden Woche wird die Tür noch verglast. Das Atelier bekommt Schiebefenstern. Abschließende Arbeiten werden die Montage des Regals sein und der einbau des Schneidertischs.
+In der kommenden Woche wird die Tür noch verglast. Das Atelier bekommt Schiebefenstern. Abschließende Arbeiten werden die Montage des Regals sein und der Einbau des Schneidertischs.
 <div class="swiper-container swiper-container-portrait">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
@@ -219,7 +219,7 @@ Die nachfolgenden Fotos und Videos handeln in der Hauptsache von den Trauerfeier
 
 ## 14. März 2022
 ... und das Leben geht weiter. Der Höhepunkt Christians Kamerun-Reise 2022 ist schon so etwas wie eine kleine Tradition geworden: Die Reise mit dem Bus in die Stadt mit Shopping-Tour.  
-Einmal im Jahr werden alle Kinder und Jugendlichen des Projekts "Eine warme Mahlzeit" durch Ihre/Eure Spenden und Mitgliedsbeiträge neu eingekleidet. So auch in diesem Jahr. Besonderheit: ein Stop vor der Bäckerei und eine Pause mit Limo, Baguette und Muffins.
+Einmal im Jahr werden alle Kinder und Jugendlichen des Projekts "Eine warme Mahlzeit" durch Ihre/Eure Spenden und Mitgliedsbeiträge neu eingekleidet. So auch in diesem Jahr. Besonderheit: ein Stopp vor der Bäckerei und eine Pause mit Limo, Baguette und Muffins.
 <div class="media-container" style="display: flex; justify-content: center;">
     <video src="/img/Galerie/Reisetagebuch/StadtEinkauf_2022 (1).mp4" controls title="Einkauf 1"></video>
 </div>
@@ -350,7 +350,7 @@ Vor Christians Abreise präsentierte Bertin ihm stolz sein "Gesellenstück" - ei
   <div class="swiper-button-next"></div>
   <div class="swiper-pagination"></div>
 </div>
-<p class="img-caption">Bertin's Gesellenstück 2022</p>
+<p class="img-caption">Bertins Gesellenstück 2022</p>
 
 ## 24. März 2022 - Nachtrag
 Christian ist inzwischen wieder wohlbehalten und gesund nach Kempen zurückgekehrt. Bei seiner Abreise stand das Schneideratelier kurz vor der Vollendung. Das Bauvorhaben ist nun abgeschlossen. Wir bekamen gestern vom Bauunternehmer Yves die nachfolgenden Fotos zugeschickt.  
