--- a/content/de/Reisetagebuch/2025.md
+++ b/content/de/Reisetagebuch/2025.md
@@ -12,7 +12,7 @@ Christian war im April 2025 erneut in Kamerun und besuchte zahlreiche Projekte i
 ## Eine warme Mahlzeit
 Das Hauptaugenmerk jeder Reise liegt auf unsere Schützlinge im Projekt "Eine warme Mahlzeit". Die Kinder sind immer glücklich Christian zu sehen und sind sehr dankbar für die Hilfe aus Deutschland. Bitte informieren Sie sich über unser Herzensprojekt: <a href="../../Versorgung/eineWarmeMahlzeit">Eine warme Mahlzeit</a>  
   
-Unser Vereinsheim wurde auch renoviert, wie Sie auf dem Titelbild sehen können. Die Kinder durften die Farben selber auswählen 😊.  
+Unser Vereinsheim wurde auch renoviert, wie Sie auf dem Titelbild sehen können. Die Kinder durften die Farben selbst auswählen 😊.  
   
 Das Video zeigt die Kinder auf unserem Vereinsgelände:
 <div class="media-container" style="display: flex; justify-content: center;">
@@ -71,7 +71,7 @@ Hier geht es zu den aktuellen Beiträgen: <a href="../../HilfeZurSelbsthilfe/umw
 <div class="img-caption">Die Müllentsorgung im April 2025</div>
 
 ## Der Besuch der Waisenhäuser
-Unser Besuch in den Waisenhäusern war voller Herzlichkeit und Emotionen. Die Kinder haben uns mit offenen Armen empfangen. Sie  haben für uns gesungen, getanzt und gelacht. Es war berührend zu sehen, wie sehr sie sich über das Wiedersehen mit uns und dem Haus der Sonne gefreut haben.  
+Unser Besuch in den Waisenhäusern war voller Herzlichkeit und Emotionen. Die Kinder haben uns mit offenen Armen empfangen. Sie haben für uns gesungen, getanzt und gelacht. Es war berührend zu sehen, wie sehr sie sich über das Wiedersehen mit uns und dem Haus der Sonne gefreut haben.  
 Unsere Spenden an Lebensmitteln und Hygieneartikeln wurden mit großer Dankbarkeit angenommen.  
   
 Hier geht es zu den aktuellen Beiträgen: <a href="../../HilfeZurSelbsthilfe/waisenhaeuser">Waisenhäuser</a>
@@ -106,7 +106,7 @@ Hier geht es zu den aktuellen Beiträgen: <a href="../../Bildung/nachhilfe">Nach
 
 ## Gesamtschule Kempen
 Am Donnerstag, den 8. Mai 2025 wurde es wieder spannend in der Gesamtschule Kempen. Der Erlös des diesjährigen "Sozialen Tags" sollte gespendet werden. Verschiedene Vereine und Einrichtungen aus Kempen, die sich Hilfe für andere Menschen auf die Fahne geschrieben haben, hatten sich beworben, um einen Teil des von den Schülerinnen und Schülern erwirtschafteten Erlöses zu erhalten.
-<u>Christian war zu dem Zeitpunkt in Mbouda</u>. Er hat ein Video vorbereitet, das zusaätzlich zu der vorbereiteten Präsentation gezeigt wurde.  
+<u>Christian war zu dem Zeitpunkt in Mbouda</u>. Er hat ein Video vorbereitet, das zusätzlich zu der vorbereiteten Präsentation gezeigt wurde.  
 Wahrscheinlich war es die Authentizität, die Christian mit dem Video vermittelt hat, die zum ersten Platz bei der Wahl welcher Verein welchen Anteil bekommen würde, führte. Wir haben somit 50% der Gesamtfördersumme erhalten. Vielen Dank!  
   
 Hier geht es zu dem Artikel: <a href="../../GesamtschuleKempen/sozialerTag">Der soziale Tag in der Gesamtschule Kempen</a>
