--- a/content/de/Reisetagebuch/2025.md
+++ b/content/de/Reisetagebuch/2025.md
@@ -22,7 +22,7 @@ Das Video zeigt die Kinder auf unserem Vereinsgelände:
     <video id="lightbox-video" controls></video>
 </div>
 
-## Die Bohrung für den 6. Brunnen ist gestartet
+## Die Arbeiten am 6. Brunnen haben begonnen 
 Der 6. Brunnen entsteht im kleinen Dorf Mekoumbou-Plateau in der Region Yaoundé 3, das rund 700 Einwohner zählt.
 Die Lebensbedingungen dort sind schwierig: Kinder und Jugendliche müssen nach der Schule oft kilometerweit laufen, um Wasser für ihre Familien und vor allem für ältere Menschen zu holen.  
   
